--- a/home.html
+++ b/home.html
@@ -13,11 +13,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Local Text Editor</title>
+        <title>Local Notes</title>
     </head>
 
-    <body class="bg-light" style="overflow-y:scroll">
-        <form method="POST" autocomplete="off">
+    <body class="bg-light" style="overflow-y:scroll" onscroll="setScroll()" onload="setScreen()">
+        <form method="POST" autocomplete="off" id="mainForm">
             {% csrf_token %}
             <header>
                 <nav class="navbar navbar-expand border-bottom" style="background-color:#e9ecef">
@@ -25,8 +25,7 @@
                         <a class="navbar-brand" href="{% url 'home' %}"><img class="main-icon" src="{% static 'favicon.ico' %}" width="40" height="40"></a>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-                            <input type="submit" class="btn btn-success me-2" name="save" id="saveButton" value="Save">
-                            <button type="button" class="btn btn-success" onclick="addForm()">✙</button>
+                            <button type="button" class="btn btn-primary" onclick="addForm()">✚</button>
                         </div>
                     </div>
                 </nav>
@@ -35,17 +34,22 @@
             <main class="wrapper m-3 min-vh-100" id="main">
                 {% for obj in objs %}
                 <div class="move position-relative mb-3" id="{{obj.id}}">
-                    <div class="position-absolute top-0 end-0"><input type="button" class="btn btn-danger" value="✘" onclick="delForm('{{obj.id}}')"></div>
-                    <textarea class="form-control" name="notes" rows="3">{{obj.text}}</textarea>
+                    <div class="position-absolute top-0 start-0">
+                        <input type="button" class="btn btn-outline-danger" value="✘" onclick="delForm('{{obj.id}}')">
+                        <input type="button" class="btn btn-outline-success" value="✓" onclick="submitForm()">
+                    </div>
+                    <input style="text-indent: 5em;" class="form-control" name="noteTitles" value="{{obj.title}}">
+                    <textarea class="form-control" name="notes" rows="3" id="text{{obj.id}}" onkeyup="checkTextareaScrollbar('text{{obj.id}}')">{{obj.text}}</textarea>
                 </div>
                 {% endfor %}
             </main>
         </form>
     
+        <div class="m-3">
+            <img class="border" src="data:image/png;base64,{{linkImg}}" width="110" height="110" title="Link to here">
+         </div>
+
         <footer class="d-flex flex-wrap justify-content-end align-items-center mt-4 border-top" style="background-color:#e9ecef">
-            <div class="d-flex align-items-center">
-                <span class="text-muted m-3"><a class="nav-link" href="/admin/">admin</a></span>
-            </div>
             <div class="d-flex align-items-center">
                 <span class="text-muted m-3">© 2023 by Alex Yurhel</span>
             </div>
@@ -53,23 +57,33 @@
 
         <!-- Empty form for cloning -->
         <div class="visually-hidden" id="form_copy">
-            <div class="position-absolute top-0 end-0"><input type="button" class="btn btn-danger" id="delButton" value="✘"></div>
+            <div class="position-absolute top-0 start-0">
+                <input type="button" class="btn btn-outline-danger" value="✘">
+                <input type="button" class="btn btn-outline-success" value="✓">
+            </div>
+            <input style="text-indent: 5em;" class="form-control" id="noteTitle">
             <textarea class="form-control" id="note" rows="3"></textarea>
         </div>
     </body>
 </html>
 <script>
-    document.onreadystatechange = updateAllFormsSize();
-    function updateAllFormsSize() {
+    document.onreadystatechange = updateAllNotesSize();
+    function updateAllNotesSize() {
         var elems = document.getElementById("main").querySelectorAll('textarea.form-control');
-        elems.forEach((el) => updateFormSize(50, el));
+        elems.forEach((el) => updateElemSize(20, el));
     }
-    function updateFormSize(px, el) {
+    function updateElemSize(px, el) {
         if (el.clientHeight < el.scrollHeight) {
             el.style.height = px + "px";
-            px += 50;
-            updateFormSize(px, el)
+            px += 20;
+            updateElemSize(px, el)
+        } else {
+            el.style.height = px + "px";
+            px += 30;
         }
+    }
+    function submitForm() {
+        document.getElementById("mainForm").submit();
     }
     function addForm() {
         // Get last element and generate new id
@@ -83,17 +97,43 @@
         // Clone form
         var form = document.getElementById("form_copy");
         var clone = form.cloneNode(true);
-        
         clone.className = "position-relative mb-3";
         clone.id = new_id;
         clone.querySelector("#note").name = "notes";
-        clone.querySelector("#delButton").setAttribute("onClick", "delForm('"+new_id+"');");
-
+        clone.querySelector("#noteTitle").name = "noteTitles"
         document.getElementById("main").appendChild(clone);
+        submitForm();
     }
     function delForm(id) {
         var divNote = document.getElementById(id);
         divNote.remove();
-        document.getElementById("saveButton").click();
+        submitForm();
+    }
+    function checkTextareaScrollbar(id) {
+        // Check scrollbar
+        var elem = document.getElementById(id);
+        if (elem.clientHeight < elem.scrollHeight)
+            updateElemSize(50, elem);
+    }
+    // Scroll
+    function setScreen() {
+        var yScreen = localStorage.getItem("yPos");
+        window.scrollTo({
+            top: yScreen,
+            left: 0,
+            behavior: "instant",
+        });
+    }
+    function setScroll() {
+        var yScroll = window.pageYOffset;
+        localStorage.setItem("yPos", yScroll);
+    }
+    function clearScreen() {
+        localStorage.setItem("yPos", 0);
+        window.scrollTo({
+            top: 0,
+            left: 0,
+            behavior: "instant",
+        });
     }
 </script>
